--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   --clr-neutral-300: hsl(241, 100%, 89%);
   --clr-neutral-200: hsl(221, 100%, 96%);
   --clr-neutral-100: hsl(0, 0%, 100%);
+
+  --fw-500: 500;
+  --fw-700: 700;
+  --fw-800: 800;
 }
 
 /*
@@ -74,6 +78,67 @@ h6 {
 /** ----- MAIN ----- **/
 body {
   font-family: 'Hanken Grotesk', sans-serif;
+  font-weight: var(--clr-gradients-500-bg);
+  font-size: 0.875rem;
+  color: var(--clr-neutral-300);
+
+  background-color: var(--clr-neutral-100);
+}
+
+.score__hero,
+.card__title,
+.card__message,
+.card__description {
+  color: var(--clr-neutral-100);
+}
+
+.card {
+  --card-padding: 1rem;
+  --card-border-radius: 1.5rem;
+
+  border-radius: var(--card-border-radius);
+  border: 1px solid red;
+  overflow: hidden;
+
+  margin: -5px;
+}
+
+.card__result {
+  padding: var(--card-padding);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background: linear-gradient(
+    var(--clr-gradients-900-bg),
+    var(--clr-gradients-500-bg)
+  );
+  border-radius: var(--card-border-radius);
+}
+
+.card__title {
+  font-weight: var(--fw-700);
+  font-size: 1.125rem;
+}
+
+.score {
+  text-align: center;
+  padding: 1rem 2.5rem;
+  border-radius: 50%;
+  background: linear-gradient(
+    var(--clr-gradients-400-1-circle),
+    var(--clr-gradients-400-0-circle)
+  );
+}
+
+.score__hero {
+  font-size: 3rem;
+  font-weight: var(--fw-800);
+}
+
+.card__message {
+  font-size: 1.5rem;
+  font-weight: var(--fw-700);
 }
 
 /** ----- FOOTER ----- **/
