--- a/style.css
+++ b/style.css
@@ -250,9 +250,18 @@ body {
   font-family: var(--ff-base);
   font-size: 1.125rem;
   color: var(--clr-neutral-100);
+
+  transition: background 0.3s ease-in-out;
 }
 
-.button:is(:hover, :focus) {
+.button:hover {
+  background: linear-gradient(
+    var(--clr-gradients-900-bg),
+    var(--clr-gradients-500-bg)
+  );
+}
+
+.button:focus {
   background: linear-gradient(
     var(--clr-gradients-900-bg),
     var(--clr-gradients-500-bg)
