Adding properties to style.css 🛠️
* `margin-left` and `margin-right` were added to make the <p> element content a bit narrower just like in the design for "desktop"

--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ body {
 
 .card__description {
   text-align: center;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 @media (min-width: 700px) {
